[project]
name = "workspace"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.117.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
chatbot = "chatbot.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chatbot"]
